--- a/usr/share/sddm/themes/arcolinux-simplicity/metadata.desktop
+++ b/usr/share/sddm/themes/arcolinux-simplicity/metadata.desktop
@@ -1,5 +1,5 @@
 [SddmGreeterTheme]
-Name=Simplicity
+Name=ArcoLinux Simplicity
 Description=Simple SDDM theme
 Type=sddm-theme
 Author=Gabriel Ibáñez
@@ -10,7 +10,7 @@ Version=1.0
 MainScript=Main.qml
 ConfigFile=theme.conf
 TranslationsDirectory=translations
-Theme-Id=simplicity
+Theme-Id=arcolinux-simplicity
 Theme-API=2.0
 Website=https://gitlab.com/isseigx/simplicity-sddm-theme
 
